# raspico

./: README.md
hello_world/: CMakeLists.txt  hw.c  infos.txt
pico_first_project/: CMakeLists.txt  blink.c
pirsensor/: CMakeLists.txt  pirsensor.c
servo/my_first_servo/: CMakeLists.txt  libservo.c  my_first_servo.c
slideswitch/: CMakeLists.txt  slideswitch.c
trashcan_lid/: CMakeLists.txt  trashcan_lid.c
